--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ navigationUi = "2.6.0"
 annotation = "1.6.0"
 activity = "1.9.3"
 tikaCore = "3.0.0"
+firebaseFirestore = "25.1.1"
 
 [libraries]
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
@@ -42,6 +43,7 @@ navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version
 annotation = { group = "androidx.annotation", name = "annotation", version.ref = "annotation" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 tika-core = { module = "org.apache.tika:tika-core", version.ref = "tikaCore" }
+firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
