--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ navigationFragment = "2.6.0"
 navigationUi = "2.6.0"
 annotation = "1.6.0"
 activity = "1.9.3"
+firebaseFirestore = "25.1.1"
 preferenceKtx = "1.2.1"
 firebaseFirestore = "25.1.1"
 preference = "1.2.1"
