Issue-5 Create settings page (#38)
* feat: Add custom UI to settings page and change password page

* Issue-2 Add backend integration (#10)

* feat: Create User and ShareRequest model classes

* feat: Create class to manage Firebase interactions

* chore: Create get/set methods for model classes

* feat: Create send file method for Firebase manager

* feat: Create download file method for Firebase manager
# Conflicts:
#	app/build.gradle.kts
#	app/src/main/java/com/github/skyfall/data/model/User.java
#	gradle/libs.versions.toml

* feat: Add custom UI to MainActivity

* Issue-3 Create send page (#13)

* feat: Add send users search user feature

* feat: Add functionality to search UI in SendActivity

* feat: Set up send file UI and functionality

* refactor: Reformat and organize code

---------

Co-authored-by: Faaizah Tas. Joita <faaizahtas.joita@macbookpro.utsarr.net>
Co-authored-by: Zachary Ohlenforst <zohlenforst@gmail.com>

* Issue-4 Create receive page (#14)

* feat: Create ReceiveActivty class

* feat: Create fetchRequests method

* feat:Create onDownloadRequest method for handling downloads

* feat:Create ShareRequestAdapter class

* feat:Create ShareRequestAdapter class

* feat: Create ShareRequestAdapter class

* feat: Add ShareRequestAdapter methods

* chore: Remove change activity intent for rebase

* feat: Add custom UI to MainActivity

* feat: Create ShareRequestAdapter class

# Conflicts:
#	app/src/main/java/com/github/skyfall/ReceiveActivity.java

* chore: Enable receive file button

* refactor: Format code and remove unused imports

* fix: Add Timestamp class to deserialize share request JSON

* feat: Add UI for ReceiveActivity utilizing ShareRequestAdapter

* feat: Create getUserByUid method for Firebase manager

* feat: Create deleteButton on receive page

* feat:Add file extension to file-name when displaying

* feat:Add file download to local storage

* Issue-3 Create send page (#13)

* feat: Add send users search user feature

* feat: Add functio

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,9 @@ navigationFragment = "2.6.0"
 navigationUi = "2.6.0"
 annotation = "1.6.0"
 activity = "1.9.3"
+firebaseFirestore = "25.1.1"
+preferenceKtx = "1.2.1"
+preference = "1.2.1"
 
 [libraries]
 compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "compiler" }
@@ -47,6 +50,9 @@ navigation-fragment = { group = "androidx.navigation", name = "navigation-fragme
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigationUi" }
 annotation = { group = "androidx.annotation", name = "annotation", version.ref = "annotation" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
+firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
+preference-ktx = { module = "androidx.preference:preference-ktx", version.ref = "preferenceKtx" }
+preference = { group = "androidx.preference", name = "preference", version.ref = "preference" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
