--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,9 @@
             <!-- </intent-filter> -->
         </activity>
         <activity android:name=".ui.receive.ReceiveActivity" />
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
